--- a/style.css
+++ b/style.css
@@ -21,7 +21,6 @@ body {
     scroll-behavior: smooth;
     font-style: normal;
     font-family: 'Roboto', sans-serif;
-    /* font-family: 'ABeeZee', sans-serif; */
     background-color: var(--white);
 }
 
@@ -33,7 +32,6 @@ a {
     text-decoration: none;
 }
 
-/* Header Styling  */
 
 .logo-text {
     color: #012555;
@@ -49,7 +47,6 @@ header {
     top: 0;
 
     width: 100%;
-    /* height: 15vh; */
     display: flex;
     flex-direction: column;
 
@@ -69,11 +66,9 @@ header {
     display: flex;
     gap: 10px;
 
-    /* padding: 15px; */
 }
 
 .logo hr {
-    /* height: 32px; */
     background-color: #DADADA;
 }
 
@@ -89,14 +84,9 @@ header {
     height: 35px;
 }
 
-/* Navbar CSS */
 
 .navbar {
-    /* padding: 15px; */
     display: flex;
-    /* padding: 15px 36px;
-    justify-content: center;
-    align-items: center; */
 }
 
 .navbar ul {
@@ -129,7 +119,6 @@ header {
     line-height: normal;
 }
 
-/* Next batch starts in */
 .banner {
     background-color: var(--primaryskyblue);
 }
@@ -141,14 +130,12 @@ header {
     font-style: italic;
     font-weight: 400;
     line-height: 150%;
-    /* 21px */
     letter-spacing: 0.28px;
 
     padding: 5px;
     text-align: center;
 }
 
-/* ---------------Hero-section------------- */
 .hero-section {
     width: 100%;
     height: 680px;
@@ -240,12 +227,6 @@ header {
 }
 
 #login-page-heading>h1 {
-    /* text-align: center;
-    line-height: 36px;
-    font-size: 35px;
-    word-spacing: 8px;
-    font-style: italic;
-    margin-bottom: 15px; */
 
     color: var(--BLACK, #2B2F34);
     text-align: center;
@@ -254,7 +235,6 @@ header {
     font-style: italic;
     font-weight: 400;
     line-height: 150%;
-    /* 48px */
     letter-spacing: -0.48px;
 }
 
@@ -301,9 +281,6 @@ header {
     background-image: linear-gradient(to right, #2f80ed, #9035ed);
 }
 
-/* .Conditions {
-    padding-bottom: 10px;
-} */
 
 .Conditions>p {
     text-align: center;
@@ -312,15 +289,9 @@ header {
     font-size: 16px;
 }
 
-/* Hero Section */
 
-main {
-
-    /* flex-shrink: 0; */
-}
 
 .hero {
-    /* width: 1440px; */
     width: 100%;
     height: 680px;
 
@@ -328,19 +299,11 @@ main {
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-
-    /* gap: 35px; */
 }
-
-
-/* Left Side */
 
 .hero-left {
     display: flex;
     flex-direction: column;
-    /* justify-content: space-between; */
-    /* align-items: center; */
-
     width: 70%vw;
 }
 
@@ -351,7 +314,6 @@ main {
     font-style: italic;
     font-weight: 400;
     line-height: 130%;
-    /* 65px */
     letter-spacing: -0.75px;
 }
 
@@ -362,7 +324,6 @@ main {
     font-style: italic;
     font-weight: 400;
     line-height: 130%;
-    /* 65px */
     letter-spacing: -0.75px;
 }
 
@@ -383,7 +344,6 @@ main {
     font-style: normal;
     font-weight: 400;
     line-height: 130%;
-    /* 23.4px */
     letter-spacing: 0.36px;
 }
 
@@ -395,7 +355,6 @@ main {
 
     height: 77px;
     padding: 15px 20px;
-    /* align-items: flex-end; */
     gap: 34px;
 
     border-radius: 8px;
@@ -424,17 +383,14 @@ main {
     font-style: italic;
     font-weight: 400;
     line-height: 130%;
-    /* 26px */
 }
 
 .icon-title-small {
     color: var(--grey2);
-    /* font-family: ?????; */
     font-size: 12px;
     font-style: normal;
     font-weight: 400;
     line-height: 155%;
-    /* 18.6px */
     letter-spacing: 0.12px;
 }
 
@@ -459,17 +415,14 @@ main {
     font-weight: 400;
     line-height: 150%;
 
-    /* padding: 10px; */
-    /* 21px */
+  
 }
 
-/* right side */
 
 .hero-right {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    /* align-items: center; */
 }
 
 .login-page-heading h1 {
@@ -480,19 +433,17 @@ main {
     font-style: italic;
     font-weight: 400;
     line-height: 150%;
-    /* 48px */
+   
     letter-spacing: -0.48px;
 }
 
 .login-page-heading p {
     color: #818D9D;
     text-align: center;
-    /* font-family: ?????; */
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
     line-height: 150%;
-    /* 24px */
 }
 
 .student-details {
@@ -514,8 +465,6 @@ main {
     font-style: italic;
     font-weight: 400;
     line-height: 150%;
-    /* 27px */
-
     display: flex;
     width: 367px;
     padding: 14px 6px 14px 16px;
@@ -527,11 +476,6 @@ main {
     background: var(--New, linear-gradient(277deg, #992FED 0%, #2F80ED 100%));
 }
 
-.timepass {
-    font-size: 13px;
-}
-
-/* Courses PAge */
 .courses {
     height: 700px;
     background: #ECF8FF;
@@ -556,12 +500,10 @@ main {
 .s2 {
     color: #2F80ED;
     text-align: center;
-    /* font-family: ABeeZee; */
     font-size: 36px;
     font-style: normal;
     font-weight: 400;
     line-height: 150%;
-    /* 54px */
     letter-spacing: -0.54px;
     text-transform: capitalize;
 }
@@ -601,27 +543,17 @@ main {
     line-height: normal;
 }
 
-.xyz {
-    /* display: flex;
-    gap: 10px; */
+.pay-after {
 
     margin: 20px 0px;
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 20px;
-
-    /* display: flex;
-    padding: 6px 15px; */
-
-
-
     border-radius: 7px;
-    /* background: #E0F3FF; */
 }
 
-.xyz1 {
-    /* display: inline; */
+.plac-lif {
 
     padding: 5px 10px;
     border-radius: 7px;
@@ -638,26 +570,16 @@ main {
 }
 
 .xyz11 {
-    /* display: flex;
-    gap: 10px; */
-
+   
     margin: 20px 0px;
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 20px;
-
-    /* display: flex;
-    padding: 6px 15px; */
-
-
-
     border-radius: 7px;
-    /* background: #E0F3FF; */
+    
 }
-
 .xyz21 {
-    /* display: inline; */
 
     padding: 5px 10px;
     /* border-radius: 5px; */
@@ -674,14 +596,13 @@ main {
     line-height: normal;
 }
 
-.sac1 {
+.sec1 {
     color: #565656;
     font-size: 14px;
     font-style: normal;
     font-weight: 400;
     line-height: 150%;
     text-align: center;
-    /* 21px */
 }
 
 .sac2 {
@@ -695,7 +616,6 @@ main {
 
 .sac3 {
     color: var(--BLACK, #2B2F34);
-    /* font-family: ABeeZee; */
     font-size: 16px;
     font-style: italic;
     font-weight: 400;
@@ -703,13 +623,10 @@ main {
 }
 
 .course-rows {
-    /* margin-top: 10px; */
-
     display: flex;
     justify-content: center;
     align-items: center;
     flex: 1;
-    /* padding: 0px 20px; */
 }
 
 .course-rows p {
@@ -757,139 +674,6 @@ main {
 
 
 
-/* Placements Page */
-
-.placements {
-    height: 750px;
-
-    display: flex;
-    flex-direction: column;
-
-    align-items: center;
-    justify-content: space-between
-}
-
-.p1 {
-    color: var(--BLACK, #2B2F34);
-    text-align: center;
-    font-family: ABeeZee;
-    font-size: 42px;
-    font-style: italic;
-    font-weight: 400;
-    line-height: 150%;
-    /* 63px */
-    letter-spacing: -0.63px;
-}
-
-.p2 {
-    color: var(--primaryskyblue, #2F80ED);
-    font-family: ABeeZee;
-    font-size: 42px;
-    font-style: italic;
-    font-weight: 400;
-    line-height: 150%;
-    letter-spacing: -0.63px;
-    text-align: center;
-}
-
-.p0 {
-    text-align: center;
-    font-family: ABeeZee;
-    font-size: 16px;
-    font-style: italic;
-    font-weight: 400;
-    line-height: normal;
-    letter-spacing: 1.28px;
-    text-transform: uppercase;
-
-    background: var(--New, linear-gradient(277deg, #992FED 0%, #2F80ED 100%));
-    background-clip: text;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-}
-
-.p4 {
-    color: var(--textlabelcolorscharcoal, #595959);
-    /* font-family: ?????; */
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 130%;
-    /* 23.4px */
-    letter-spacing: 0.36px;
-    text-align: center;
-}
-
-.placement-report {
-
-    display: flex;
-    width: 276px;
-    padding: 14px 6px 14px 16px;
-    align-items: center;
-    justify-content: center;
-    align-items: center;
-    gap: 2px;
-
-    border-radius: 8px;
-    background: var(--primaryskyblue, #2F80ED);
-
-    color: var(--WHITE, #FFF);
-    font-family: ABeeZee;
-    font-size: 18px;
-    font-style: italic;
-    font-weight: 400;
-    line-height: 150%;
-    /* 27px */
-
-    /* align-self: center; */
-}
-
-.placement-report:hover {
-    cursor: pointer;
-}
-
-.placement-report img {
-    /* height: 22px; */
-}
-
-.placement-button {
-    padding: 70px;
-}
-
-
-.alumni {
-    height: 750px;
-    background: #FFF;
-}
-
-.df3 {
-    padding-top: 50px;
-    padding-bottom: 0px;
-}
-
-.alumni h2 {
-    color: var(--BLACK, #2B2F34);
-    text-align: center;
-    font-family: ABeeZee;
-    font-size: 42px;
-    font-style: italic;
-    font-weight: 400;
-    line-height: 150%;
-    /* 63px */
-    letter-spacing: -0.63px;
-}
-
-.al2 {
-    color: var(--textlabelcolorscharcoal, #595959);
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 130%;
-    /* 23.4px */
-    letter-spacing: 0.36px;
-    text-align: center;
-}
-
 .container {
     display: grid;
     align-items: center;
@@ -905,8 +689,6 @@ main {
     flex-direction: column;
 
     justify-self: center;
-
-    /* align-items: center; */
     gap: 20px;
 
     width: 350px;
@@ -932,17 +714,15 @@ main {
     font-style: italic;
     font-weight: 400;
     line-height: 150%;
-    /* 33px */
 }
 
 .ct2 {
     color: #676767;
-    /* text-align: center; */
+
     font-size: 16px;
     font-style: normal;
     font-weight: 602;
     line-height: 150%;
-    /* 24px */
 }
 
 .para {
@@ -951,10 +731,8 @@ main {
     font-style: normal;
     font-weight: 400;
     line-height: 150%;
-    /* 24px */
 
     text-align: justify;
-    /* display: inline; */
 }
 
 .para1 {
@@ -963,7 +741,7 @@ main {
     font-style: normal;
     font-weight: 400;
     line-height: 150%;
-    /* 18px */
+  
 }
 
 li {
@@ -1102,26 +880,6 @@ li {
         flex-direction: column;
         justify-content: center;
     }
-    /* #scroll-container{
-        width: auto;
-        margin: 10px;
-    }
-    #list{
-        width: auto;
-        margin: 10px;
-        white-space:nowrap;
-        overflow-x: scroll;
-    }
-    #list::-webkit-scrollbar {
-        display: none;
-    }
-    #list>img{
-        display: inline-block;
-        margin: 10px;
-    } */
     #scroll-container{
         display: none;
     }
-
-
-}
